# erratic

./: Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: ci.yaml  publish.yaml
src/: backtrace.rs  builder.rs  context.rs  fmt.rs  lib.rs  macros.rs  nae.rs  payload.rs  ptr.rs  raw.rs  render.rs  rtti.rs  state.rs  test_artifacts.rs
src/raw/: backtrace.rs  erased.rs  ptr.rs  source.rs
tests/: context.rs  error.rs  payload.rs  state.rs  ui.rs
tests/common/: mod.rs
tests/ui/: debug_alt_simple.stderr  debug_alt_triple.stderr  debug_custom_triple.stderr  debug_simple.stderr  debug_triple.stderr  display_alt_simple.stderr  display_alt_triple.stderr  display_custom_triple.stderr  display_simple.stderr  display_triple.stderr
