[package]
name = "erratic"
version = "0.19.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Little Lan <lansyin@foxmail.com>"]
categories = ["rust-patterns", "no-std"]
description = "Composable, minimal-overhead error handling with typed state. "
keywords = ["error", "error-handling"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lansyin/erratic"
repository = "https://github.com/lansyin/erratic"

[dependencies]

[features]
default = []
backtrace = []

[package.metadata.docs.rs]
features = ["backtrace"]
